--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,12 @@
 .header {
-  background: #b71775;
   height: 200px;
 }
 
 .header h1 {
   margin: 0;
-  padding-top: 75px;
+  padding-top: 25px;
   text-align: center;
   color: white;
   font-size: 3rem;
+  display: inline;
 }
