--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,12 +1,15 @@
-.navbar {
-  background: #6a1b9a;
-  height: 60px;
+.heading {
+    min-height: 30;
+    line-height: 5.5;
+    font-size: 1.2rem;
+    padding: 0 20px;
+    display: inline;
 }
 
-.navbar a {
-  color: white;
-  font-size: 1.3rem;
-  text-decoration: none;
-  margin: 5px;
-  line-height: 3;
+.links {
+    text-decoration: none;
+}
+
+.headTitle {
+    padding-left: 50;
 }
